--- a/src/styles.css
+++ b/src/styles.css
@@ -2,7 +2,8 @@
   font-family: Arial, Helvetica, sans-serif;
 }
 
-html, body {
+html,
+body {
   margin: 0;
   border: 0;
   padding: 0;
@@ -15,7 +16,11 @@ main {
   padding: 20px;
 }
 
-main > h1 {
+main>h1 {
   text-align: center;
   font-size: 3.5em;
+}
+
+main>h2 {
+  text-align: center;
 }
